--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,9 @@
     border-radius: 3px;
     cursor: pointer;
   }
+  .self-btn {
+    @apply mt-auto bg-violet-800 bg-opacity-50 hover:bg-opacity-75 transition-colors duration-200 rounded-xl font-semibold py-2 px-4 inline-flex cursor-pointer
+  }
 }
 
 @tailwind utilities;
